cluster/apps/networking/omada/middleware-whitelist.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: omada-whitelist-ips
  namespace: networking
spec:
  ipWhiteList:
    sourceRange:
      - ${SECRET_OMADA_WHITELIST_IP_1}/32
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: omada-whitelist
  namespace: networking
spec:
  chain:
    middlewares:
      - name: omada-whitelist-ips
