cluster/apps/networking/omada/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: omada-ingressroute-tcp-1
  namespace: networking
spec:
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: omada-whitelist
          namespace: networking
      services:
        - name: omada-controller-controller
          port: 29811
          weight: 10
          terminationDelay: 400
          proxyProtocol:
            version: 1
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: omada-ingressroute-tcp-2
  namespace: networking
spec:
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: omada-whitelist
          namespace: networking
      services:
        - name: omada-controller-controller
          port: 29812
          weight: 10
          terminationDelay: 400
          proxyProtocol:
            version: 1
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: omada-ingressroute-tcp-3
  namespace: networking
spec:
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: omada-whitelist
          namespace: networking
      services:
        - name: omada-controller-controller
          port: 29813
          weight: 10
          terminationDelay: 400
          proxyProtocol:
            version: 1
  tls:
    passthrough: true
